[package]
name = "divapi"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "main"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "gql"
path = "src/bin/gql.rs"
required-features= ["gql"]

[dependencies]
tokio = { version = "*", features = [ "full" ] }
serde = { version = "*", features = [ "derive" ] }
chrono = { version = "*", features= [ "serde" ] }
uuid = { version = "*", features= [ "v4", "serde" ] }
url = "2"
futures = "0.3"
serde_json = "*"
actix-service = "*"
actix = "*"
actix-rt = "*"
actix-web = "*"
actix-cors = "*"
actix-files = "*"
actix-session="*"
actix-multipart = "*"
actix-redis = "*"
# reqwest = { version="*", features = ["json"] }

async-graphql = { version = "*", optional= true }
async-graphql-actix-web = { version = "*", optional = true }
rusoto_core = { version = "*", optional = true }
rusoto_cognito_idp = { version = "*", optional = true }
rusoto_cognito_identity = { version = "*", optional = true }

div_db = { path = "./di-db/" }
div_com = { path = "./di-comm/" }
div_cloud = { path = "./di-cloud/" }
log = "0.4.13"
env_logger="*"
tera = "1.6.1"


[features]
default=[]
graphql=["div_db/gql", "async-graphql", "async-graphql-actix-web"]
cognito=["rusoto_core", "rusoto_cognito_identity", "rusoto_cognito_idp"]

[profile.release]
lto=true
codegen-units=1
#opt-level='z' #optimize for size
panic='abort'

[alias]
r = "run"
b = "build"
