[package]
name = "div_api"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "main"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "gql"
path = "src/bin/gql.rs"
required-features= ["gql"]

[dependencies]
tokio = { version = "1.0.2", features = [ "full" ] }
serde = { version = "*", features = [ "derive" ] }
chrono = { version = "*", features= [ "serde" ] }
uuid = { version = "0.8", features= [ "v4", "serde" ] }
toml = "*"
url = "2"
futures = "0.3"
serde_json = { version = "*", features = ["preserve_order"] }
actix-service = "*"
actix = "*"
actix-rt = "*"
actix-web = "3"
actix-cors = "0.5.4"
# actix-files = "*"
# actix-web-actors = "4.0.0-beta.1"
actix-session="0.4.0"
actix-multipart = "*"
actix-redis = "*"
actix-web-validator = "2.0.3"
derive_more = "*"
# reqwest = { version="*", features = ["json"] }
async-graphql = { version = "*", optional= true }
async-graphql-actix-web = { version = "*", optional = true }
rusoto_core = { version = "*", optional = true }
rusoto_cognito_idp = { version = "*", optional = true }
rusoto_cognito_identity = { version = "*", optional = true }

div_db = { path = "./di-db/" }
div_com = { path = "./di-comm/" }
div_cloud = { path = "./di-cloud/" }
log = "0.4.13"
env_logger= "0.8.2"
tera = "1.6.1"
jsonwebtoken = "7.2.0"
juniper = "0.15.2"
rust_decimal = { version = "1.6.0", features = [ "serde-float" ] }
anyhow = "*"
prometheus = "*"
actix-web-prom = "0.5.1"
dotenv = "0.15.0"
actix-web-httpauth = "0.5.0"
rust-argon2 = "0.8.3"
strum = "0.20.0"
strum_macros = "0.20.1"


[features]
default=[]
graphql=["div_db/gql", "async-graphql", "async-graphql-actix-web"]
cognito=["rusoto_core", "rusoto_cognito_identity", "rusoto_cognito_idp"]


[alias]
r = "run"
b = "build"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

