[package]
name = "api"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diva = { path="./diva", optional=true }
divt = { path="./divt", optional=true }
divw = { path="./divw", optional=true }
common = { path="./common", optional=false }

[features]
actix = ["diva"]
tide = ["divt"]
warp = ["divw"]

[[bin]]
name="diva" #dev
path="./diva/src/bin/dev.rs"

[[bin]]
name="divt"
path="./divt/src/bin/main.rs"

[[bin]]
name="divw"
path="./divw/src/bin/main.rs"
