[package]
name = "divapi"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "main"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "gql"
path = "src/bin/gql.rs"
required-features= ["gql"]

[dependencies]
tokio = { version = "*", features = [ "full" ] }
serde = { version = "*", features = [ "derive" ] }
validator = { version = "*", features = [ "derive" ] }
futures = "*"
serde_json = "*"
actix = "*"
actix-rt = "*"
actix-web = "*"
actix-cors = "*"
actix-files = "*"
actix-identity = "*"
#actix-web-actors = "*"
#actix-session = "*"
#actix-web-middleware-cognito = "*"

async-graphql = { version = "*", optional= true }
async-graphql-actix-web = { version = "*", optional = true }

divdb = { path = "../db/" }
com = { path = "../com/" }

[dev-dependencies]
log = "*"
#listenfd = "*"
#dotenv="*"

[features]
default=[]
graphql=["divdb/gql", "async-graphql", "async-graphql-actix-web"]

[alias]
r = "run"
b = "build"
