[package]
name = "div_cloud"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core"] }
uuid = { version = "*", features = ["serde", "v5"] }
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
serde_json = "*"
futures = "*"
#rusoto_core= { version = "*", features = ["rustls"] }
rusoto_core= "*"
rusoto_credential="*"
dynomite = "0.10"
rusoto_dynamodb= { version = "*", features = ["serialize_structs", "deserialize_structs"] }
rusoto_cognito_idp= { version = "*", features = ["serialize_structs", "deserialize_structs"] }
rusoto_cognito_identity= { version = "*", features = ["serialize_structs", "deserialize_structs"] }
rusoto_s3= { version = "*", features = ["serialize_structs", "deserialize_structs"] }
dotenv="*"

#dynomite="*"
