[package]
name = "div_cloud"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core"] }
uuid = { version = "*", features = ["serde", "v5"] }
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
serde_json = "*"
futures = "*"
#rusoto_core= { version = "*", features = [] }
rusoto_core= "*"
rusoto_credential="*"
dynomite = "0.10"
rusoto_dynamodb= { version = "*", features = ["serialize_structs", "deserialize_structs", ] }
rusoto_cognito_idp= { version = "*", features = ["serialize_structs", "deserialize_structs", ] }
rusoto_cognito_identity= { version = "*", features = ["serialize_structs", "deserialize_structs", ] }
rusoto_s3= { version = "*", features = ["serialize_structs", "deserialize_structs", ] }
rusoto_sts = { version = "*", features = ["serialize_structs"] }
dotenv="*"

#dynomite="*"
#rusoto_iam="*"
#rusoto_dynamodb_stream="*"
#rusoto_glacier="*"
#rusoto_kms="*"
#rusoto_kinesis="*"
#rusoto_sns
#rusoto_secretsmanager
#rusoto_ses
#rusoto_sts
#rusoto_sqs
#rusoto_mq
#rusoto_secretsmanager
#risuto_signature
#risuto_kineesis
#rusoto_logs
#rusoto_firehose
#rusoto_ec2
#rusoto_ecs
#rusoto_cognito_sync="*"
