[package]
name = "com"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
argonautica="*"
chrono = { version="*", features = ["serde"] }
async-trait = "*"
#jsonwebtoken = "*"

[dependencies.sqlx]
version = "0.4.0-beta.1"
default_features = false
features = ["postgres", "json", "uuid", "chrono", "macros", "runtime-async-std"]
