[package]
name = "common"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam="*"
serde={version="*", features=["derive"]}
serde_json="*"
tokio={version="0.2", features=["full"]}

