[package]
name = "divdb"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "main"

[lib]
name="divdb"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
com = { path = "./../com" }
async-std = { version = "1.6.0", features = ["attributes"] }
async-trait = "*"
#async-sqlx-session = { version = "*", features = ["pg"] }
futures = "0.3.1"
#tokio = { version = "*", features = ["full"] , optional=true}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde", "v4"] }
async-graphql= {version="*", optional=true}
refinery = { version = "*", features = ["postgres"] }
#barrel = { version = "*", features = ["pg"] }
#validator = { version = "0.11", features = ["derive"] }

dynomite = "*"
#juniper="*"
dotenv="*"
#argonautica = "*"
#walkdir = "*"
#juniper = { version = "*" }
#refinery = { version = "0.3.0", features = ["postgres"] }
#barrel = { version = "0.6.5", features = ["pg"] }

div_cloud = { path = "../cloud/" }

[dependencies.sqlx]
version = "0.4.0-beta.1"
default_features = false
features = ["postgres", "json", "uuid", "chrono", "macros", "runtime-async-std", "tls"]
#features = ["postgres", "json", "uuid", "chrono", "macros", "runtime-actix", "tls", "migrate"]


[dev-dependencies]
dotenv="*"
#fake="*"
log="*"

[features]
default=[]
gql=["async-graphql"]
#sqlite

[alias]
r = "run"
bm =  "run --bin main"
