[package]
name = "div_db"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "main"

[lib]
name="div_db"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
div_com = { path = "../di-comm/" }
async-std = { version = "1.6.0", features = ["attributes"] }
async-trait = "*"
# juniper = "*"
#async-sqlx-session = { version = "*", features = ["pg"] }
futures = "0.3.1"
#tokio = { version = "*", features = ["full"] , optional=true}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
async-graphql= {version="*", optional=true}
refinery = { version = "*", features = ["postgres"] }
#barrel = { version = "*", features = ["pg"] }
#validator = { version = "0.11", features = ["derive"] }

dynomite = "*"
#juniper="*"
dotenv="*"
#argonautica = "*"
#walkdir = "*"
#juniper = { version = "*" }
#refinery = { version = "0.3.0", features = ["postgres"] }
#barrel = { version = "0.6.5", features = ["pg"] }

div_cloud = { path = "../di-cloud/" }

[dependencies.sqlx]
version = "0.4.0-beta.1"
default_features = false
features = ["postgres", "json", "uuid", "chrono", "macros", "runtime-async-std", "tls"]
#features = ["postgres", "json", "uuid", "chrono", "macros", "runtime-actix", "tls", "migrate"]


[dev-dependencies]
dotenv="*"
#fake="*"
log="*"

[features]
default=[]
gql=["async-graphql"]
#sqlite

[alias]
r = "run"
bm =  "run --bin main"
