[package]
name = "divapi"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = [ "full" ] }
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
reqwest = "*"
actix = "*"
actix-rt = "*"
actix-web = "*"
actix-cors = "*"
actix-files = "*"
#actix-web-actors = "*"
divdb = { path = "../db/" }

