[package]
name = "divt"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

[dependencies]
com={path="../../com/", optional=false}
divdb={path="../../db/", optional=false}
tide={version="*", optional=false}
async-std={version="*", features=["unstable", "attributes"], optional=false}
async-trait = {version="*", optional=false}
serde = { version = "*", features = ["derive"], optional=false }
serde_json = { version="*", optional=false }
#tide-http-auth = "*"
#async-graphql-tide= {version="*", optional=true}
#async-graphql= {version="*", optional=true}

[dev-dependencies]
criterion="*"

[features]
default=[]
#gql=["async-graphql", "async-graphql-tide"]

[[bin]]
name="main"
path="./src/bin/main.rs"
