[package]
name = "aws"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core"] }
hyper = { version = "0.13.6", features = ["runtime"] }
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
serde_json = "*"

lambda_runtime="*"
rusoto_core="*"
rusoto_dynamodb="*"
rusoto_credential="*"
rusoto_s3="*"
rusoto_cognito_identity="*"

dynomite="*"
