[package]
name = "div_cloud"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core"] }
#hyper = { version = "0.13.6", features = ["runtime"] }
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
serde_json = "*"

#lambda_runtime="*"
rusoto_core="*"
rusoto_dynamodb="*"
rusoto_credential="*"
rusoto_cognito_idp= { version = "*", features = ["serialize_structs", "deserialize_structs"] }
rusoto_cognito_identity= { version = "*", features = ["serialize_structs", "deserialize_structs"] }
rusoto_s3="*"
dotenv="*"

#dynomite="*"
