[package]
name = "aws"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core="*"
rusoto_s3="*"
rusoto_dynamodb="*"
dynomite="*"
rusoto_cognito_identity="*"
